--- a/protected/composer.json
+++ b/protected/composer.json
@@ -2,7 +2,7 @@
     "name": "nineinchnick/demo",
 	"type": "project",
     "description": "Demo App presenting niix and edatatables packages",
-	"homepage": "http://niix.pl",
+	"homepage": "http://demo.niix.pl",
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -13,6 +13,7 @@
     ],
     "require": {
 		"php": ">=5.3.2"
+		,"phpmd/phpmd" : "1.*"
 		,"yiisoft/yii": "1.1.14"
 		,"nineinchnick/edatatables": "dev-master"
 		,"nineinchnick/select2": "~1.0"
@@ -21,8 +22,5 @@
 		,"nineinchnick/yii-exporter": "dev-master"
 		,"crisu83/yiistrap": "dev-master"
 		,"fzaninotto/faker": "dev-master"
-    }, 
-	"config": { 
-		"vendor-dir": "protected/vendors" 
-	}
+    }
 }
